# drift

./: .gitignore  Cargo.toml  README.md  build-plan.json  build.sh  cava_config  copy_credentials.sh  debug_run.sh  flake.nix  manual_token_refresh.py  manual_token_refresh.sh  refresh_tokens.sh  result  run.sh  test_api.sh  test_cava_config  test_playback.sh  test_queue.sh  test_search.sh  test_search_debug.sh  test_stream.sh  test_streaming.sh  test_tui.sh  tidal  tidal-dl
crates/drift-plugin/: Cargo.toml  plugin.json
crates/drift-plugin/src/: dedup.rs  lib.rs  prune.rs  ttl.rs
src/: album_art.rs  cava.rs  config.rs  download_db.rs  downloads.rs  history_db.rs  lib.rs  main.rs  mpd.rs  queue_persistence.rs  search.rs  search_cache.rs  tidal.rs  tidal_auth.rs  tidal_db.rs  video.rs
src/app/: downloads.rs  mod.rs  navigation.rs  playback.rs  queue.rs  state.rs  sync.rs
src/handlers/: keyboard.rs  mod.rs
src/service/: bandcamp.rs  bandcamp_storage.rs  mixed_playlist.rs  mod.rs  multi.rs  tidal.rs  youtube.rs  youtube_storage.rs
src/storage/: aspen.rs  local.rs  local_first.rs  merge.rs  metadata_cache.rs  mod.rs  wal.rs
src/sync/: api.rs  engine.rs  mod.rs
src/ui/: album_detail.rs  artist_detail.rs  browse.rs  dialog.rs  downloads.rs  help.rs  keybindings.rs  library.rs  mod.rs  now_playing.rs  queue.rs  search.rs  status_bar.rs  styles.rs  theme.rs  visualizer.rs
tests/: download_db.rs  history_db.rs  storage_local.rs
tests/nixos/: mpd-integration.nix  remote-mpd.nix
