[package]
name = "tidal-tui"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tidal API
tidalrs = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.11", features = ["json"] }

# TUI framework
ratatui = "0.29"
crossterm = "0.28"

# MPD client for playback
mpd_client = "1.4"

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
dirs = "5"
clap = { version = "4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
which = "6"

# Album art display
image = "0.25"
ratatui-image = { version = "1.0", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Configuration
toml = "0.8"