[package]
name = "drift"
version = "0.1.0"
edition = "2021"

[dependencies]
# Tidal API (direct HTTP, not using tidalrs SDK)
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "stream"] }
futures-util = "0.3"

# Download tracking database
rusqlite = { version = "0.32", features = ["bundled"] }

# Audio metadata tagging
id3 = "1.16"
metaflac = "0.2"

# TUI framework
ratatui = "0.30"
crossterm = "0.28"

# MPD control (uses mpc CLI, not mpd_client)

# Utilities
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
async-trait = "0.1"
dirs = "5"
chrono = { version = "0.4", features = ["serde"] }
base64 = "0.21"
which = "6"

# Album art display
image = "0.25"
ratatui-image = { version = "1.0", features = ["serde"] }

# Logging
tracing = "0.1"

# Configuration
toml = "0.8"

# Random number generation (for album radio track selection)
rand = "0.8"

# HTML scraping (for Bandcamp search)
scraper = "0.20"
urlencoding = "2"

# Fuzzy matching for search (used by helix-editor, ~6x faster than skim)
nucleo = "0.5"

# LRU cache for bounded memory usage
lru = "0.12"